--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,8 @@
 <html>
 
-<head><title> System Architectures | Home Page </title></head>
+<head><title> System Architectures | Home Page </title>
+<link href="styles.css" rel="stylesheet" type="text/css" />
+</head>
 
 <body>
 
